Fix spacing on select item

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -62,7 +62,7 @@ body {
 .form-signin input[type="text"],
 .form-signin input[type="password"],
 .form-signup input[type="text"],
-.form-signup input[type="password"]
+.form-signup input[type="password"],
 .form-signup select{
   font-size: 16px;
   height: auto;
